--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
   "name": "NetGuruAPI",
   "version": "0.1.0",
-  "description": "Recruitment Task for NetGuru (lets check if I'm real NodeGuru! ;)",
+  "description": "Recruitment Task for NetGuru (lets check if I'm a real NodeGuru! ;)",
   "main": "index.js",
-  "repository": "https://github.com/LucasMatuszewski/BooksAPI",
+  "repository": "https://github.com/LucasMatuszewski/MoviesAPI",
   "author": "LucasMatuszewski <lucas.matuszewski@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mongoose": "^5.3.11"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
+  }
 }
