--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "author": "LucasMatuszewski <lucas.matuszewski@gmail.com>",
   "license": "MIT",
   "private": false,
+  "engines": {
+    "node": "8.9.3"
+  },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -18,6 +22,8 @@
     "mongoose": "^5.3.11"
   },
   "devDependencies": {
-    "nodemon": "^1.18.6"
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.6",
+    "supertest": "^3.3.0"
   }
 }
